// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/destinations Integration Tests (DELETE) /destinations/ with url param 1`] = `
{
  "aeTitle": "AE_TITLE",
  "hostIp": "0.1.1.1",
  "name": "SOME_NAME",
  "port": 5000,
}
`;

exports[`/destinations Integration Tests (GET) /destinations with destinations 1`] = `
[
  {
    "aeTitle": "AE_TITLE",
    "hostIp": "0.1.1.1",
    "name": "SOME_NAME",
    "port": 5000,
  },
]
`;

exports[`/destinations Integration Tests (GET) /destinations with destinations 2`] = `
[
  {
    "aeTitle": "AE_TITLE-2",
    "hostIp": "0.1.1.2",
    "name": "SOME_NAME-2",
    "port": 5002,
  },
  {
    "aeTitle": "AE_TITLE-1",
    "hostIp": "0.1.1.1",
    "name": "SOME_NAME-1",
    "port": 5001,
  },
  {
    "aeTitle": "AE_TITLE-3",
    "hostIp": "0.1.1.3",
    "name": "SOME_NAME-3",
    "port": 5003,
  },
]
`;

exports[`/destinations Integration Tests (GET) /destinations/echo/:name dicom echo a missing destination  1`] = `
{
  "status": 404,
  "title": "Not Found",
  "traceId": "00-75faa21c19aa287947659f52b1a9f797-6535ba8afea43179-00",
  "type": "https://tools.ietf.org/html/rfc7231#section-6.5.4",
}
`;

exports[`/destinations Integration Tests (POST) /destinations/ Invalid body 1`] = `
{
  "message": "The following properties are missing from the destinations object: aeTitle",
  "statusCode": 400,
}
`;

exports[`/destinations Integration Tests (POST) /destinations/ Invalid body 2`] = `
{
  "message": "The following properties are missing from the destinations object: name",
  "statusCode": 400,
}
`;

exports[`/destinations Integration Tests (POST) /destinations/ Invalid body 3`] = `
{
  "message": "The following properties are missing from the destinations object: port",
  "statusCode": 400,
}
`;

exports[`/destinations Integration Tests (POST) /destinations/ Invalid body 4`] = `
{
  "message": "The following properties are missing from the destinations object: hostIp",
  "statusCode": 400,
}
`;

exports[`/destinations Integration Tests (POST) /destinations/ Invalid body 5`] = `
{
  "message": "The following properties are missing from the destinations object: aeTitle, hostIp, name, port",
  "statusCode": 400,
}
`;

exports[`/destinations Integration Tests (POST) /destinations/ with body 1`] = `
{
  "aeTitle": "AE_TITLE",
  "hostIp": "0.1.1.1",
  "name": "SOME_NAME",
  "port": 5000,
}
`;

exports[`/destinations Integration Tests (PUT) /destinations/:name Invalid body 1`] = `
{
  "message": "The following properties are missing from the destinations object: aeTitle",
  "statusCode": 400,
}
`;

exports[`/destinations Integration Tests (PUT) /destinations/:name Invalid body 2`] = `
{
  "message": "The following properties are missing from the destinations object: name",
  "statusCode": 400,
}
`;

exports[`/destinations Integration Tests (PUT) /destinations/:name Invalid body 3`] = `
{
  "message": "The following properties are missing from the destinations object: port",
  "statusCode": 400,
}
`;

exports[`/destinations Integration Tests (PUT) /destinations/:name Invalid body 4`] = `
{
  "message": "The following properties are missing from the destinations object: hostIp",
  "statusCode": 400,
}
`;

exports[`/destinations Integration Tests (PUT) /destinations/:name Invalid body 5`] = `
{
  "message": "The following properties are missing from the destinations object: aeTitle, hostIp, name, port",
  "statusCode": 400,
}
`;

exports[`/destinations Integration Tests (PUT) /destinations/:name changed name 1`] = `
{
  "status": 404,
  "title": "Not Found",
  "traceId": "00-75faa21c19aa287947659f52b1a9f797-6535ba8afea43179-00",
  "type": "https://tools.ietf.org/html/rfc7231#section-6.5.4",
}
`;

exports[`/destinations Integration Tests (PUT) /destinations/:name with body 1`] = `
{
  "aeTitle": "AE_TITLE",
  "hostIp": "0.1.1.1",
  "name": "SOME_NAME",
  "port": 5000,
}
`;
